<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyGpaCalc</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">WELCOME TO MY GPA CALCULATOR APP</string>
    <string name="totUl">Enter total unit load of courses</string>

    <string-array name="grades">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
    </string-array>


    <string-array name="ul">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>120</item>
    </string-array>

    <string name="title_activity_show_gp">ShowGP</string>
    <string name="Entry_Point">Enter the total unit load of courses</string>
    <string name="enter_courses">Enter courses</string>
    <string name="enter_unit_loads">Enter unit loads</string>
    <string name="calc_gpa">CALC. GPA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calculate">CALCULATE</string>
    <string name="remove">REMOVE</string>
    <string name="add">ADD</string>
    <string name="save">SAVE</string>
    <string name="your_gpa">Your Grade Point is:</string>
    <string name="welcome_to_gp_calc">Grade Point Calculator</string>
    <string name="enter_name_level_semester">Enter details (level/semester)</string>
    <string name="start">START</string>
    <string name="view_previous_ones">View Previous Ones</string>
    <string name="load">Load</string>
    <string name="course">Course</string>
    <string name="grade">Grade</string>
    <string name="grade_unit">Grade Unit</string>
    <string name="number_of_courses">Number of Courses</string>
    <string name="nuber_of_unit_loads">Total Unit Loads</string>
    <string name="previously_saved_gps">Previously Saved GPs</string>
    <string name="calc_new">Calculate New</string>
    <string name="create_new">Create New</string>
    <string name="delete_all">Delete All</string>
    <string name="about">About</string>

</resources>
