<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.maricool.johnbatista.mygpacalc.ui.create_gp.FirstScreenViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        app:cardElevation="8dp"
        app:cardCornerRadius="12dp"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:elevation="8dp"
        android:layout_height="match_parent"
        tools:context=".ui.create_gp.FirstScreenFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/this_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Enter Name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/appCompatEditText"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/appCompatEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name_level_semester"
            android:inputType="textNoSuggestions"
            android:lines="1"
            android:text="@={viewModel.details}"
            android:padding="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="24dp"
            android:textColor="@color/black"
            android:background="@drawable/edit_text_rounded_corners"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/this_title"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:onClick="@{() -> viewModel.start()}"
            android:text="@string/start"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatEditText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>