<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="result"
            type="com.maricool.johnbatista.mygpacalc.data.models.GpResultModel" />

        <variable
            name="viewModel"
            type="com.maricool.johnbatista.mygpacalc.ui.show_gp.ShowGPViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="8dp"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context=".ui.show_gp.ShowGPFragment">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/close"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="@+id/calc_new"
                app:layout_constraintStart_toStartOf="@+id/calc_new"
                app:layout_constraintTop_toBottomOf="@+id/calc_new"
                app:srcCompat="@drawable/ic_close" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_gpa"
                android:textColor="@color/fab_background"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/gp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tView"
                android:layout_margin="16dp"
                android:text="@{result.gp}"
                android:textColor="@color/fab_background"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tView"
                tools:text="4.00" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/commen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@{result.comm}"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="italic|normal"
                app:layout_constraintEnd_toEndOf="@+id/gp"
                app:layout_constraintStart_toStartOf="@+id/gp"
                app:layout_constraintTop_toBottomOf="@+id/gp"
                tools:text="First Class" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:background="@drawable/rounded_corners"
                android:onClick="@{() -> viewModel.goToSavedGps()}"
                android:padding="3dp"
                android:text="@string/previously_saved_gps"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/commen" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/calc_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/rounded_corners"
                android:onClick="@{() -> viewModel.startNewCalc()}"
                android:padding="3dp"
                android:text="@string/calc_new"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/list" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
